[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Checkpoint/Checkpoint.gd" type="Script" id=1]


[sub_resource type="CircleShape2D" id=1]
radius = 28.9455

[node name="Checkpoint_1" type="Area2D"]
script = ExtResource( 1 )

[node name="checheckpoint_area" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
[connection signal="body_entered" from="." to="." method="_on_Checkpoint_1_body_entered"]
[connection signal="global_checkpoint_hit" from="." to="." method="_on_Checkpoint_1_global_checkpoint_hit"]
